# restaurant-sales-forecasting

./: .gitignore  Makefile  pyproject.toml
config/: main.yaml
data/processed/: X_test.parquet  X_train.parquet  y_test.parquet  y_train.parquet
outputs/2023-02-10/14-26-26/.hydra/: hydra.yaml
outputs/2023-02-10/14-30-45/.hydra/: config.yaml  hydra.yaml
outputs/2023-02-10/14-32-46/.hydra/: hydra.yaml
src/: pipeline.py  process.py  transformers.py
