[tool.poetry]
name = "restaurant-sales-forecasting"
version = "0.1.0"
description = ""
authors = ["Eric Yang"]

[tool.poetry.dependencies]
python = "^3.9"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
prefect = "^2.7.6"
scikit-learn = "^1.2.0"
pandas = "^1.5.3"
prefect-jupyter = "^0.2.0"
interrogate = "^1.5.0"
joblib = "^1.2.0"
hydra-core = "^1.1.1"
dvc = "^2.9.4"
mlflow = "^1.25.1"
pydantic = { version = "^1.8.2", optional = true }
workalendar = "^17.0.0"
xgboost = "^1.7.3"
lightgbm = "^3.3.5"
pyarrow = "^11.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.19.0"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''
